--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.2",
     "react": "^18.3.1",
